use citybox beta

--- a/app/views/spree/admin/shared/_order_submenu.html.erb
+++ b/app/views/spree/admin/shared/_order_submenu.html.erb
@@ -1,5 +1,5 @@
 <% content_for :sub_menu do %>
   <ul id="sub_nav" data-hook="admin_order_sub_tabs" class="inline-menu">
-    <%= tab :citybox_orders %>
+    <%= tab :citybox_orders, 'Envios Citybox' %>
   </ul>
 <% end %>
