--- a/app/views/spree/admin/citybox_orders/index.html.erb
+++ b/app/views/spree/admin/citybox_orders/index.html.erb
@@ -44,7 +44,7 @@
             <td class="align-center"><%= citybox.citybox_location rescue '' %></td>
             <td class="align-center"><%= citybox.city rescue '' %></td>
             <td class="align-center"><%= citybox.country rescue '' %></td>
-            <td class="align-center"><%= citybox.order.id rescue '' %></td>
+            <td class="align-center"><%= citybox.order.number rescue '' %></td>
             <td class="align-center"><%= citybox.total rescue '' %></td>
             <td class="align-center"><%= citybox.email rescue '' %></td>
             <td class="align-center"><%= citybox.phone rescue '' %></td>
